[package]
name = "mongo_tput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", "features" = ["derive"] }
mongodb = "2.8.2"
serde_yaml = "0.9.34"
serde_derive = "1.0.203"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
futures-util = "0.3.30"
structopt = "0.3.26"
uuid = "1.8.0"
