[package]
name = "mongo_pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0.203", "features" = ["derive"] }
serde_derive = "1.0.203"
tracing = "0.1"
uuid = "1.8.0"

[dev-dependencies]
derive-getters = "0.4.0"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["full"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
